--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -41,10 +41,10 @@ header {
 }
 
 body {
-    font-family: 'Futura', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0 20px;
-    background-color: white
+    background-color: antiquewhite
     
 }
 
@@ -123,17 +123,22 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #322727;
     padding: 8px;
     text-align: left;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #cb8a8a;
 }
 
 td a{
     text-decoration: none;
+    color: rgb(29, 29, 212)
+}
+
+td a:hover{
+    color: rgb(4, 4, 108)
 }
 
 
