--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -25,6 +25,109 @@ header {
     color: #ffcc00;
 }
 
+
+/* ---------------------------------------- */
+.subscribe-container {
+    text-align: center;
+    margin-top: 20px; 
+    background-color: rgb(249, 250, 251);
+}
+
+.subscribe-form {
+    flex-direction: column;
+    max-width: 800px;
+    margin: 0 auto; /
+}
+
+.subscribe-container h4 {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+}
+
+.subscribe-form input[type="email"] {
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 400px;
+}
+
+.subscribe-form input[type="submit"] {
+    background-color: #4CAF50; 
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s; 
+}
+
+.subscribe-form input[type="submit"]:hover {
+    background-color: #45a049; 
+}
+
+/* ---------------------------------------- */
+.survey-form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input, select, textarea {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+
+
+/* ---------------------------------------- */
+
+
+.social-links h3 {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+}
+
+.social-links a {
+    display: inline-block;
+    margin: 10px; 
+}
+
+.social-links img {
+    border-radius: 50%; 
+    border: 2px solid #333; 
+    transition: transform 0.3s; 
+}
+
+.social-links img:hover {
+    transform: scale(1.1); 
+}
+
+/* ---------------------------------------- */
+
 @media screen and (max-width: 750px) {
     .main-menu ul {
         color: green;
@@ -55,6 +158,8 @@ h1 {
     text-align: center;
 }
 
+/* ---------------------------------------- */
+
 .theme {
     display: flex;
     justify-content: center;
@@ -81,6 +186,7 @@ h3 {
     color: #0066cc;
 }
 
+/* ---------------------------------------- */
 
 .left-image, .right-image {
     max-width: 40%; /* Змініть розмір фото за необхідності */
@@ -114,6 +220,30 @@ img {
 }
 
 
+/* ---------------------------------------- */
+
+.tour-container {
+    max-width: 700px;
+    margin: 20px auto;
+    overflow: hidden;
+}
+
+.tour {
+    margin-bottom: 30px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 15px;
+    background-color: #f9f9f9;
+}
+
+.tour img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 15px;
+    border-radius: 5px;
+}
+
+/* ---------------------------------------- */
 
 table {
     width: 90%;
