Created media queries on the main page

--- a/lab1/css/style.css
+++ b/lab1/css/style.css
@@ -255,6 +255,13 @@ button:hover {
     transform: scale(1.1); 
 }
 
+@media only screen and (max-width: 420px) {
+    .social-links img {
+        width: 60px; /* Задайте бажаний розмір іконок для менших екранів */
+        height: 60px;
+    }
+}
+
 /* ---------------------------------------- */
 
 
